# Simulation-of-the-Sensing-Model

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/stb/: stb_image.cpp  stb_image_write.cpp
resource/: shader.fs
src/: main.cpp
