cmake_minimum_required(VERSION 3.0.0)
project(multi-light)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
message(STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17")
message(STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS})
set(SOURCE_FILES src/main.cpp) # set(SOURCE_FILES src/main.cpp src/glad.c)
add_executable(main ${SOURCE_FILES})
target_link_libraries(main soil glfw3 glad glew32 freeglut_static opengl32 glm) 